--- a/PacMan/PacMan/PacMan.csproj
+++ b/PacMan/PacMan/PacMan.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Direction.cs" />
     <Compile Include="PacMan.cs" />
+    <Compile Include="Pellet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
